--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -23,3 +23,7 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  google_app:
+    # Prajil's App
+    client_id:  60670745798-5uivg6uc45nm1kdj5d4rkmjrq887u000.apps.googleusercontent.com
+    client_secret:  s0gqbtY3s3-bk3Xa-JA4Uosg
