databe config for production

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,3 +17,9 @@ development:
   database: kottaram
   username: postgres
   password: qburst
+
+production:
+  <<: *default
+  database: kottaram
+  username: postgres
+  password: qburst
