Updated ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
-!/log/.keep
-!/tmp/.keep
+/config/database.yml
 
 # Ignore Byebug command history file.
 .byebug_history
